# blockchain-fundamentals

./: Cargo.toml
backend/: Cargo.toml
backend/src/: main.rs  utility.rs
backend/src/content/: mod.rs
backend/src/content/blockchain/: blockchain.rs  mod.rs
backend/src/content/user/: transaction.rs
frontend/: package-lock.json  vite.config.ts
frontend/src/: App.css  App.tsx
frontend/src/components/: UserWallet.tsx
src/: block.rs  blockchain.rs  development.txt  main.rs  utility.rs
src/content/blockchain/: block.rs  blockchain.rs
src/content/user/: mod.rs  transaction.rs  wallet.rs
