[package]
name = "mini-blockchain"
version = "0.1.0"
edition = "2021"

[dependencies]

secp256k1 = { version = "0.30.0", features = ["rand"] }
tower-http = { version = "0.6.2", features = ["cors"] }
sha2 = "0.10.8"
serde = { version = "1.0", features = ["derive"] }
hex-literal = "0.4.1"
hex = "0.4"
chrono = "0.4"
axum = { version = "0.8.1", features = ["macros"] }
tokio = { version = "1.36", features = ["full"] }
serde_json = "1.0"
uuid = { version = "1.13.1", features = ["v4"] } # For unique IDs if needed
tower = "0.4" # Add this line
